# nexus

./: .gitignore  CLAUDE.md  README.md  index.html
backend/: pyproject.toml
backend/migrations/: 001_initial_schema.sql  002_add_quickstart_fields.sql  003_add_enrich_status.sql  004_projects.sql  005_setup_fields.sql  006_semantic_groups.sql  007_edge_confidence_and_concept_layer.sql  008_concept_name_per_project.sql
backend/src/nexus/: __init__.py  ai.py  ai_cloud.py  ai_config.py  cli.py  cli_ask.py  cli_compact.py  cli_concept.py  cli_gaps.py  cli_ingest.py  cli_journey.py  cli_mcp.py  cli_onboard.py  cli_project.py  cli_replicate.py  cli_scan.py  cli_status.py  cli_track.py  cluster.py  compact.py  context.py  db.py  db_concepts.py  display.py  enrich.py  expertise.py  export.py  fetch.py  gaps.py  graph_helpers.py  infer.py  mcp_server.py  models.py  pipeline.py  replicate.py  routes.py  routes_ai.py  routes_graph.py  routes_journey.py  routes_projects.py  (+3 more)
backend/src/nexus/hooks/: post-tool-use.sh  session-end.sh
backend/src/nexus/scanners/: __init__.py  claude_md.py  eagle_mem.py  git_history.py  imports.py  mcp.py  packages.py
backend/src/nexus/skill/: nexus.md
backend/tests/: test_ai.py  test_ai_config.py  test_api.py  test_cli.py  test_cli_project.py  test_compact.py  test_db.py  test_enrich.py  test_expertise.py  test_export.py  test_fetch.py  test_gaps.py  test_graph.py  test_hook_registration.py  test_ingest.py  test_journey.py  test_mcp_install.py  test_mcp_tools.py  test_models.py  test_replicate.py  test_scanners.py  test_track.py
desktop/: package.json  pnpm-lock.yaml  vite.config.ts
docs/: api-reference.md  claude-code-integration.md  cli-reference.md  configuration.md  graph-pipeline.md  usage-guide.md
plans/: graph-quality-overhaul.md  structural-edge-pipeline.md  v1.5-polish.md  v2-claude-integration.md  v2-implementation.md  v2-roadmap.md  (+1 more)
(+45 files in other folders)
