[project]
name = "nexus-graph"
version = "0.2.6"
description = "Personal learning knowledge graph powered by local AI"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "mcp[cli]>=1.27.0",
]

[project.optional-dependencies]
cloud = ["anthropic>=0.40", "openai>=1.50"]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]

[project.scripts]
nexus = "nexus.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
filterwarnings = ["error"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
